--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBSC25</title>
 </head>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>BelleBreeze Summer Camp 2025</h1>
     <p>こんにちは</p>   
