--- a/home.html
+++ b/home.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBSC25</title>
+    <!-- Google Fonts 読み込み -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Sawarabi+Gothic&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+    <!-- CSSファイルの読み込み -->
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="./style.css"/>
 <body>
-    <h1>BelleBreeze Summer Camp 2025</h1>
-    <p>こんにちは</p>   
-    <script src="./js/script.js"></script>
-    <li><a href="team.html">チーム紹介</a></li>
-    <li><a href="schedule.html">スケジュール</li>
+  <header>
+    <h1>BelleBreeze<br>Summer Camp<br>2024</h1>
+    <!-- ハンバーガーアイコン -->
+    <div class="menu-icon" id="menu-toggle">&#9776;</div>
+
+    <nav id="nav" class="side-nav">
+      <ul>
+        <li><a href="home.html">ホーム</a></li>
+        <li><a href="team.html">チーム紹介</a></li>
+        <li><a href="schedule.html">スケジュール</a></li>
+        <li><a href="items.html">持ち物</a></li>
+      </ul>
+    </nav>
+  </header>
+  <script src="js/script.js"></script>
+  <main>
+    <p>これはZen Maru Gothicというおしゃれなフォントを使ったサンプルです。</p>
+  </main>
 </body>
 </html>
