--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
       </ul>
     </nav>
   </header>
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
   <main>
     <p>これはZen Maru Gothicというおしゃれなフォントを使ったサンプルです。</p>
   </main>
