--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
   </header>
   <script src="script.js"></script>
   <main>
-    <p>これはZen Maru Gothicというおしゃれなフォントを使ったサンプルです。</p>
+    <p>なつが来た！熱さがガツンと心に刺さる夏合宿！</p>
   </main>
 </body>
 </html>
