--- a/schedule.html
+++ b/schedule.html
@@ -6,10 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>夏合宿2025スケジュール</h1>
+    <header>
+        <h1>夏合宿2025スケジュール</h1>
+        <!-- ハンバーガーアイコン -->
+        <div class="menu-icon" id="menu-toggle">&#9776;</div>
+        <nav id="nav" class="side-nav">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="items.html">持ち物</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
+            <li><a href="team.html">チーム紹介</a></li>
+        </ul>
+        </nav>
+    </header>
     <h2>1日目</h2>
     <h2>2日目</h2>
     <h2>3日目</h2>
     <h2>4日目</h2>
+    <script src="script.js"></script>
 </body>
 </html>
