--- a/team.html
+++ b/team.html
@@ -6,7 +6,20 @@
     <title>BBSC2025 Team</title>
 </head>
 <body>
-    <h1>チーム</h1>
+    <header>
+        <h1>チーム</h1>
+        <!-- ハンバーガーアイコン -->
+        <div class="menu-icon" id="menu-toggle">&#9776;</div>
+        <nav id="nav" class="side-nav">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="items.html">持ち物</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
+            <li><a href="team.html">チーム紹介</a></li>
+        </ul>
+        </nav>
+    </header> 
+    <script src="script.js"></script>
     <p>今回のチームの発表です。最終日の試合やレクなどはこのチームで戦います！</p>
     <h2>赤</h2>
     <p></p>
