--- a/home.html
+++ b/home.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBSC25</title>
-    <!-- Google Fonts 読み込み -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Sawarabi+Gothic&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
-    <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>BBSC25</title>
+  <!-- Google Fonts 読み込み -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Sawarabi+Gothic&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+  <!-- CSSファイルの読み込み -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -20,15 +19,15 @@
     <nav id="nav" class="side-nav">
       <ul>
         <li><a href="home.html">ホーム</a></li>
-        <li><a href="team.html">チーム紹介</a></li>
-        <li><a href="schedule.html">スケジュール</a></li>
         <li><a href="items.html">持ち物</a></li>
+        <li><a href="schedule.html">スケジュール</a></li>
+        <li><a href="team.html">チーム紹介</a></li>
       </ul>
     </nav>
   </header>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
   <main>
-    <p>なつが来た！熱さがガツンと心に刺さる夏合宿！</p>
+    <p>これはZen Maru Gothicというおしゃれなフォントを使ったサンプルです。</p>
   </main>
 </body>
 </html>
