--- a/items.html
+++ b/items.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBSC25 Items</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -20,6 +20,6 @@
         </ul>
         </nav>
     </header>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
