--- a/items.html
+++ b/items.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>持ち物</h1>
+        <h1>Items</h1>
         <!-- ハンバーガーアイコン -->
         <div class="menu-icon" id="menu-toggle">&#9776;</div>
         <nav id="nav" class="side-nav">
         <ul>
-            <li><a href="home.html">ホーム</a></li>
-            <li><a href="items.html">持ち物</a></li>
-            <li><a href="schedule.html">スケジュール</a></li>
-            <li><a href="team.html">チーム紹介</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="items.html">Items</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="team.html">Team</a></li>
         </ul>
         </nav>
     </header>
