--- a/schedule.html
+++ b/schedule.html
@@ -5,22 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBCS25 Schedule</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Schedule</h1>
-        <!-- ハンバーガーアイコン -->
-        <div class="menu-icon" id="menu-toggle">&#9776;</div>
-        <nav id="nav" class="side-nav">
+    <!-- ハンバーガーアイコン -->
+    <div class="menu-icon" id="menu-toggle">&#9776;</div>
+
+    <!-- ロゴ（右上に配置） -->
+    <a href="home.html" class="logo">BBSC25</a>
+
+    <!-- ナビゲーション -->
+    <nav id="nav" class="side-nav">
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="team.html">Team</a></li>
         </ul>
-        </nav>
+    </nav>
     </header>
     
+    <h1>Schedule</h1>
     <h2>1日目</h2>
     <ul><li>10:00 集合・説明</li></ul>
 
