--- a/items.html
+++ b/items.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+    <h1>Items</h1>
     <!-- ハンバーガーアイコン -->
     <div class="menu-icon" id="menu-toggle">&#9776;</div>
 
@@ -22,12 +23,21 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
             <li><a href="team.html">Team</a></li>
+            <li class="dropdown">
+                <span class="dropdown-toggle">Schedule</span>
+                <ul class="dropdown-menu">
+                    <li><a href="schedule.html#day1">DAY1</a></li>
+                    <li><a href="schedule.html#day2">DAY2</a></li>
+                    <li><a href="schedule.html#day3">DAY3</a></li>
+                    <li><a href="schedule.html#day4">DAY4</a></li>
+                </ul>
+            </li>
+            
         </ul>
     </nav>
     </header>
     <script src="js/script.js"></script>
-    <h1>Items</h1>
+    
 </body>
 </html>
