--- a/home.html
+++ b/home.html
@@ -59,26 +59,40 @@
                 旅館かねよ志
             </a>
             <br>
+            住所 : 
             <a href="https://maps.app.goo.gl/FtfFzpjdZrdTnzcr6" target="_blank" rel="noopener noreferrer">
-                （群馬県利根郡片品村土出２２９２）
+                群馬県利根郡片品村土出２２９２
             </a>
         </div>
     </div>
 
     <div class="info-row">
-        <div class="info-label">費用</div>
-        <div class="info-detail">一泊二日 : 12,000円<br>二泊三日 : <br>三泊四日 : </div>
+        <div class="info-label">費用<br>（当日回収）</div>
+        <div class="info-detail">三泊四日 : 40,000円<br>二泊三日 : 31,000円<br>一泊二日 : 12,000円</div>
     </div>
 
     <div class="info-row">
         <div class="info-label">集合</div>
-        <div class="info-detail">時間 : 2025/08/13 (Wed)<br>場所 : 新宿</div>
+        <div class="info-detail">時間 : 2025/08/13 (Wed) 7:45<br>
+            場所 : 
+            <a href="https://maps.app.goo.gl/9ipfcyBbpxY9bny39" target="_blank" rel="noopener noreferrer">
+                池袋駅西口東京芸術劇場前
+            </a>
+        </div>
+    </div>
+    <div class="info-row">
+        <div class="info-label">解散</div>
+        <div class="info-detail">時間 : 2025/08/17 (Sat) 17:30頃<br>
+            場所 : 池袋駅西口付近
+            </a>
+        </div>
     </div>
 
     <div class="info-row">
-        <div class="info-label">注意事項</div>
-        <div class="info-detail">保険証のコピーを持参</div>
+        <div class="info-label" id="organizer">幹事</div>
+        <div class="info-detail">大介・とおる・ゆずの</div>
     </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
