--- a/items.html
+++ b/items.html
@@ -37,6 +37,75 @@
         </ul>
     </nav>
     </header>
+    <div class="notes-box">
+      <h4>持ち物について</h4>
+      <ul>
+        <li>洗濯ができるので衣類は3日分程度で十分です。</li>
+        <li>ハンガー、洗濯ネット、洗濯ばさみがあると便利です。</li>
+        <li>夜は20℃くらいまで下がるので羽織れるものを持ってきてください。</li>
+        <li>みんなで遊べるゲームの持ち込み大歓迎です！</li>
+      </ul>
+    </div>
+    <div class="last-updated">※ページを再読み込みするとチェックが外れます。</div>
+    <div class="item-container">
+        <div class="category">
+            <h2>日用品</h2>
+            <div class="item-list">
+            <label><input type="checkbox"> 歯ブラシ</label>
+            <label><input type="checkbox"> ハンカチ</label>
+            <label><input type="checkbox"> ティッシュ</label>
+            <label><input type="checkbox"> 汗拭きシート</label>
+            <label><input type="checkbox"> メガネ・コンタクト</label>
+            <label><input type="checkbox"> 日焼け止め</label>
+            <label><input type="checkbox"> 虫よけスプレー</label>
+            <label><input type="checkbox"> ドライヤー（備え付けあり）</label>
+            <label><input type="checkbox"> シャンプー・コンディショナー（備え付けあり）</label>
+            <label><input type="checkbox"> 洗顔料・メイク落とし・化粧品</label>
+            <label><input type="checkbox"> くし・ヘアアイロン・整髪料</label>
+            <label><input type="checkbox"> カミソリ・ひげそり</label>
+            <label><input type="checkbox"> 洗濯ネット</label>
+            <label><input type="checkbox"> ハンガー・洗濯ばさみ</label>
+            <label><input type="checkbox"> 生理用品</label>
+            <label><input type="checkbox"> 常備薬・湿布</label>
+            </div>
+            <h2>電子機器類</h2>
+            <div class="item-list">
+            <label><input type="checkbox"> スマホ</label>
+            <label><input type="checkbox"> 充電器</label>
+            <label><input type="checkbox"> モバイルバッテリー</label>
+            </div>
+        </div>
+        <div class="category">
+            <h2>衣類</h2>
+            <div class="item-list">
+            <label><input type="checkbox"> 着替え</label>
+            <label><input type="checkbox"> 下着・靴下</label>
+            <label><input type="checkbox"> パジャマ・ルームウェア</label>
+            <label><input type="checkbox"> スポーツウェア</label>
+            <label><input type="checkbox"> 上着（寒さ対策）</label>
+            <label><input type="checkbox"> バスタオル・汗拭きタオル</label>
+            </div>
+            <h2>貴重品</h2>
+            <div class="item-list">
+            <label><input type="checkbox"> 財布</label>
+            <label><input type="checkbox"> 合宿費</label>
+            <label><input type="checkbox"> 現金（飲み物とか買うため）</label>
+            <label><input type="checkbox"> 保険証（コピーでも可）</label>
+            </div>
+            
+            <h2>その他</h2>
+            <div class="item-list">
+            <label><input type="checkbox"> テニスラケット</label>
+            <label><input type="checkbox"> テニスシューズ</label>
+            <label><input type="checkbox"> サブバッグ（コートにもっていく）</label>
+            <label><input type="checkbox"> キャップ</label>
+            <label><input type="checkbox"> 折り畳み傘</label>
+            <label><input type="checkbox"> ビニール袋</label>
+            <label><input type="checkbox"> サンダル・水鉄砲（川遊び用）</label>
+            <label><input type="checkbox"> ボードゲーム等</label>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
     
 </body>
