--- a/schedule.html
+++ b/schedule.html
@@ -39,31 +39,95 @@
     </nav>
     </header>
     
-    
+    <div class="notes-box" id="day1">
+      <h4>注意事項</h4>
+      <ul>
+        <li>予定は当日変わることがあります。幹事の話をしっかり聞いてください。</li>
+        <li>天候によって一部変更・中止になる場合があります。</li>
+        <li>スケジュールに関して気になることがあれば<a href="home.html#organizer">幹事</a>まで！</li>
+      </ul>
+    </div>
+
     <div class="schedule-container">
-        <div class="day-section" id="day1">
+        <div class="day-section">
             <div class="first-hday">DAY1</div>
             <div class="hdate">8/13 (Wed)</div>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-time">8:00</div>
+                    <div class="timeline-time"></div>
                     <div class="timeline-content">
-                        <h3>集合</h3>
-                        <p>新宿にて集合後、バスで現地へ向かいます。</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-time">11:00</div>
+                    <div class="timeline-time">7:45</div>
                     <div class="timeline-content">
-                        <h3>昼食</h3>
-                        <p>１日目の昼食は持参してください。</p>
+                        <h3>集合</h3>
+                        <p>池袋西口東京芸術劇場前</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">8:00</div>
+                    <div class="timeline-content">
+                        <h3>バス発車時刻</h3>
+                        <p>お昼ご飯を持ってきてください。</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">9:00</div>
+                    <div class="timeline-content">
+                        <h3>高坂SA</h3>
+                        <p>交通状況により時間は変わります。</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">10:30</div>
+                    <div class="timeline-content">
+                        <h3>赤城高原SA</h3>
+                        <p>交通状況により時間は変わります。</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">12:00</div>
+                    <div class="timeline-content">
+                        <h3>「かねよ志」到着</h3>
+                        <p>荷物を置き、昼食をとって着替えてください。</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">12:45</div>
+                    <div class="timeline-content">
+                        <h3>集合</h3>
+                        <p>テニスができる格好で玄関前に</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-time">13:00</div>
                     <div class="timeline-content">
-                        <h3>旅館到着・チェックイン</h3>
-                        <p>荷物を置きます。</p>
+                        <h3>テニス</h3>
+                        <p>バスで移動</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:00</div>
+                    <div class="timeline-content">
+                        <h3>入浴</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">18:00</div>
+                    <div class="timeline-content">
+                        <h3>夕食</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">20:30</div>
+                    <div class="timeline-content">
+                        <h3>レク①・宴会</h3>
+                        <p>宴会場に集合</p>
                     </div>
                 </div>
             </div>
@@ -74,24 +138,59 @@
             <div class="hdate">8/14 (Thu)</div>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-time">7:00</div>
+                    <div class="timeline-time">7:30</div>
                     <div class="timeline-content">
                         <h3>朝食</h3>
-                        <p>食堂に集合してください。</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-time">午前</div>
+                    <div class="timeline-time">9:00</div>
                     <div class="timeline-content">
                         <h3>テニス</h3>
-                        <p>近くのコートで練習を開始します。</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-time">12:00</div>
                     <div class="timeline-content">
                         <h3>昼食</h3>
-                        <p>旅館に戻り昼食。</p>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:30</div>
+                    <div class="timeline-content">
+                        <h3>川遊び / テニス</h3>
+                        <p>どちらか好きな方で好きなように</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:00</div>
+                    <div class="timeline-content">
+                        <h3>入浴</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">18:00</div>
+                    <div class="timeline-content">
+                        <h3>夕食</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">20:00</div>
+                    <div class="timeline-content">
+                        <h3>花火</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">21:00</div>
+                    <div class="timeline-content">
+                        <h3>レク②・宴会</h3>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -102,10 +201,59 @@
             <div class="hdate">8/15 (Fri)</div>
              <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-time">午後</div>
+                    <div class="timeline-time">7:30</div>
                     <div class="timeline-content">
-                        <h3>自由行動</h3>
-                        <p>川遊びをしたり、テニスをしたり自由に過ごしてください。</p>
+                        <h3>朝食</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">9:00</div>
+                    <div class="timeline-content">
+                        <h3>テニス</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">12:00</div>
+                    <div class="timeline-content">
+                        <h3>昼食</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:30</div>
+                    <div class="timeline-content">
+                        <h3>レク③・運動会</h3>
+                        <p>近くにある体育館で行います。テニスのときの服装でOK！</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:00</div>
+                    <div class="timeline-content">
+                        <h3>スイカ割り</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">18:00</div>
+                    <div class="timeline-content">
+                        <h3>バーベキュー</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">20:00</div>
+                    <div class="timeline-content">
+                        <h3>入浴</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">21:00</div>
+                    <div class="timeline-content">
+                        <h3>肝試し・宴会</h3>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -115,6 +263,20 @@
             <div class="hday">DAY4</div>
             <div class="hdate">8/16 (Sat)</div>
             <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-time">7:30</div>
+                    <div class="timeline-content">
+                        <h3>朝食</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">～8:50</div>
+                    <div class="timeline-content">
+                        <h3>準備</h3>
+                        <p>チェックアウトできるように荷物をまとめてください。</p>
+                    </div>
+                </div>
                  <div class="timeline-item">
                     <div class="timeline-time">9:00</div>
                     <div class="timeline-content">
@@ -123,10 +285,38 @@
                     </div>
                 </div>
                 <div class="timeline-item">
+                    <div class="timeline-time">12:30</div>
+                    <div class="timeline-content">
+                        <h3>試合</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
                     <div class="timeline-time">13:00</div>
                     <div class="timeline-content">
-                        <h3>現地出発</h3>
-                        <p>荷物をまとめ、忘れ物がないか確認します。</p>
+                        <h3>自由時間</h3>
+                        <p>入浴可</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:45</div>
+                    <div class="timeline-content">
+                        <h3>集合</h3>
+                        <p>結果発表・宿の方に挨拶・記念撮影</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">14:00</div>
+                    <div class="timeline-content">
+                        <h3>バス出発</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:30</div>
+                    <div class="timeline-content">
+                        <h3>到着</h3>
+                        <p>池袋駅西口付近</p>
                     </div>
                 </div>
             </div>
