--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBCS25Teamm</title>
+    <title>BBCS25Team</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,17 +39,25 @@
     </nav>
     </header>
     
+    <div class="notes-box">
+      <h4>チームについて</h4>
+      <ul>
+        <li>このメンバーと一緒に試合やレクを行います！</li>
+        <li>スコアは随時更新予定です。</li>
+      </ul>
+    </div>
+    <div class="last-updated">（最終更新 2025/07/15 14:40）</div>
+
     <div class="team-container">
       <div class="team-card red-team">
         <h3>赤チーム</h3>
         <div class="team-score">
-          SCORE: <span id="score-red">0</span>
+          <span id="score-red">-</span> pts
         </div>
         <ul class="member-list">
           <li class="year-divider">3年生</li>
           <li>名前</li>
           <li class="year-divider">2年生</li>
-          <li>名前</li>
           <li>名前</li>
           <li class="year-divider">1年生</li>
           <li>名前</li>
@@ -61,7 +69,7 @@
       <div class="team-card blue-team">
         <h3>青チーム</h3>
         <div class="team-score">
-          SCORE: <span id="score-blue">0</span>
+          <span id="score-blue">-</span> pts
         </div>
         <ul class="member-list">
           <li class="year-divider">3年生</li>
@@ -69,7 +77,6 @@
           <li class="year-divider">2年生</li>
           <li>名前</li>
           <li class="year-divider">1年生</li>
-          <li>名前</li>
           <li>名前</li>
           <li class="year-divider">OB・OG</li>
           <li>名前</li>
@@ -79,7 +86,7 @@
       <div class="team-card yellow-team">
         <h3>黄チーム</h3>
         <div class="team-score">
-          SCORE: <span id="score-yellow">0</span>
+          <span id="score-yellow">-</span> pts
         </div>
         <ul class="member-list">
           <li class="year-divider">3年生</li>
@@ -89,7 +96,6 @@
           <li class="year-divider">1年生</li>
           <li>名前</li>
           <li class="year-divider">OB・OG</li>
-          <li>名前</li>
           <li>名前</li>
         </ul>
       </div>
