--- a/items.html
+++ b/items.html
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 </head>
-
-    
 <body>
     <header>
     <h1>Items</h1>
@@ -84,6 +82,7 @@
             <label><input type="checkbox"> 下着・靴下</label>
             <label><input type="checkbox"> パジャマ・ルームウェア</label>
             <label><input type="checkbox"> スポーツウェア</label>
+            <label><input type="checkbox"> ぬれてもいい服（川遊び用）</label>
             <label><input type="checkbox"> 上着（寒さ対策）</label>
             <label><input type="checkbox"> バスタオル・汗拭きタオル</label>
             </div>
@@ -97,8 +96,10 @@
             
             <h2>その他</h2>
             <div class="item-list">
+            <label><input type="checkbox"> 一日目のお昼</label>
             <label><input type="checkbox"> テニスラケット</label>
             <label><input type="checkbox"> テニスシューズ</label>
+            <label><input type="checkbox"> 水筒</label>
             <label><input type="checkbox"> サブバッグ（コートにもっていく）</label>
             <label><input type="checkbox"> キャップ</label>
             <label><input type="checkbox"> 折り畳み傘</label>
