--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
       <div class="team-card red-team">
         <h3>赤チーム</h3>
         <div class="team-score">
-          <span id="score-red">-</span> pts
+          <span id="score-red">25</span> pts
         </div>
         <ul class="member-list">
           <li class="year-divider">3年生</li>
@@ -69,7 +69,7 @@
       <div class="team-card blue-team">
         <h3>青チーム</h3>
         <div class="team-score">
-          <span id="score-blue">-</span> pts
+          <span id="score-blue">40</span> pts
         </div>
         <ul class="member-list">
           <li class="year-divider">3年生</li>
@@ -86,7 +86,7 @@
       <div class="team-card yellow-team">
         <h3>黄チーム</h3>
         <div class="team-score">
-          <span id="score-yellow">-</span> pts
+          <span id="score-yellow">80</span> pts
         </div>
         <ul class="member-list">
           <li class="year-divider">3年生</li>
