--- a/team.html
+++ b/team.html
@@ -99,6 +99,24 @@
           <li>名前</li>
         </ul>
       </div>
+
+      <div class="team-card green-team">
+        <h3>緑チーム</h3>
+        <div class="team-score">
+          <span id="score-green">-</span> pts
+        </div>
+        <ul class="member-list">
+          <li class="year-divider">3年生</li>
+          <li>名前</li>
+          <li class="year-divider">2年生</li>
+          <li>名前</li>
+          <li class="year-divider">1年生</li>
+          <li>名前</li>
+          <li class="year-divider">OB・OG</li>
+          <li>名前</li>
+        </ul>
+      </div>
+
     </div>
     <script src="js/script.js"></script>
 </body>
