--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="intro-overlay">
-        <img src="cover.jpg" alt="カバー画像">
+        <img src="img/cover.jpg" alt="カバー画像">
     </div>
 
     <header>
@@ -73,7 +73,7 @@
 
     <div class="info-row">
         <div class="info-label">集合</div>
-        <div class="info-detail">時間 : 2025/08/13 (Wed) 7:45<br>
+        <div class="info-detail">時間 : 2025/08/13 (Wed) 7:30<br>
             場所 : 
             <a href="https://maps.app.goo.gl/9ipfcyBbpxY9bny39" target="_blank" rel="noopener noreferrer">
                 池袋駅西口東京芸術劇場前
