--- a/schedule.html
+++ b/schedule.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-time">7:45</div>
+                    <div class="timeline-time">7:30</div>
                     <div class="timeline-content">
                         <h3>集合</h3>
                         <p>池袋西口東京芸術劇場前</p>
@@ -162,21 +162,14 @@
                 <div class="timeline-item">
                     <div class="timeline-time">13:30</div>
                     <div class="timeline-content">
-                        <h3>川遊び / テニス</h3>
-                        <p>どちらか好きな方で好きなように</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">17:00</div>
-                    <div class="timeline-content">
-                        <h3>入浴</h3>
-                        <p></p>
+                        <h3>レク②・運動会</h3>
+                        <p>近くにある体育館で行います。テニスのときの服装でOK！</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-time">18:00</div>
                     <div class="timeline-content">
-                        <h3>夕食</h3>
+                        <h3>BBQ</h3>
                         <p></p>
                     </div>
                 </div>
@@ -190,7 +183,7 @@
                 <div class="timeline-item">
                     <div class="timeline-time">21:00</div>
                     <div class="timeline-content">
-                        <h3>レク②・宴会</h3>
+                        <h3>レク③・宴会</h3>
                         <p></p>
                     </div>
                 </div>
@@ -225,31 +218,25 @@
                 <div class="timeline-item">
                     <div class="timeline-time">13:30</div>
                     <div class="timeline-content">
-                        <h3>レク③・運動会</h3>
-                        <p>近くにある体育館で行います。テニスのときの服装でOK！</p>
+                        <h3>テニス / 川遊び</h3>
+                        <p>どちらか好きなほうで</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-time">17:00</div>
                     <div class="timeline-content">
-                        <h3>スイカ割り</h3>
+                        <h3>入浴</h3>
                         <p></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-time">18:00</div>
                     <div class="timeline-content">
-                        <h3>バーベキュー</h3>
+                        <h3>夕食</h3>
                         <p></p>
                     </div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">20:00</div>
-                    <div class="timeline-content">
-                        <h3>入浴</h3>
-                        <p></p>
-                    </div>
-                </div>
+                
                 <div class="timeline-item">
                     <div class="timeline-time">21:00</div>
                     <div class="timeline-content">
