--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
 
     <div class="team-container">
       <div class="team-card red-team">
-        <h3>赤チーム</h3>
+        <h3>チーム１</h3>
         <div class="team-score">
           <span id="score-red">-</span> pts
         </div>
@@ -67,7 +67,7 @@
       </div>
     
       <div class="team-card blue-team">
-        <h3>青チーム</h3>
+        <h3>チーム２</h3>
         <div class="team-score">
           <span id="score-blue">-</span> pts
         </div>
@@ -84,7 +84,7 @@
       </div>
     
       <div class="team-card yellow-team">
-        <h3>黄チーム</h3>
+        <h3>チーム３</h3>
         <div class="team-score">
           <span id="score-yellow">-</span> pts
         </div>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="team-card green-team">
-        <h3>緑チーム</h3>
+        <h3>チーム４</h3>
         <div class="team-score">
           <span id="score-green">-</span> pts
         </div>
