--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="intro-overlay">
-        <img src="cover.jpg" alt="カバー画像">
+        <img src="img/cover.png" alt="カバー画像">
     </div>
 
     <header>
@@ -27,6 +27,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
             <li><a href="team.html">Team</a></li>
+            <li><a href="drink.html">Drink</a></li>
             <li class="dropdown">
                 <span class="dropdown-toggle">Schedule</span>
                 <ul class="dropdown-menu">
@@ -68,7 +69,7 @@
 
     <div class="info-row">
         <div class="info-label">費用<br>（当日回収）</div>
-        <div class="info-detail">三泊四日 : 40,000円<br>二泊三日 : 31,000円<br>一泊二日 : 12,000円</div>
+        <div class="info-detail">三泊四日 : 38,000円<br>二泊三日 : 28,000円<br>一泊二日 : 18,000円</div>
     </div>
 
     <div class="info-row">
@@ -90,7 +91,7 @@
 
     <div class="info-row">
         <div class="info-label" id="organizer">幹事</div>
-        <div class="info-detail">大介・とおる・ゆずの</div>
+        <div class="info-detail">大介・とおる</div>
     </div>
 
     <script src="js/script.js"></script>
