--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="intro-overlay">
-        <img src="img/cover.png" alt="カバー画像">
+        <img src="cover.png" alt="カバー画像">
     </div>
 
     <header>
