--- a/items.html
+++ b/items.html
@@ -24,6 +24,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
             <li><a href="team.html">Team</a></li>
+            <li><a href="drink.html">Drink</a></li>
             <li class="dropdown">
                 <span class="dropdown-toggle">Schedule</span>
                 <ul class="dropdown-menu">
@@ -201,7 +202,7 @@
                 </div>
                 <div class="item-wrapper">
                     <label><input type="checkbox"> サンダル・水鉄砲</label>
-                    <p class="item-note">川遊び用にあると良い</p>
+                    <p class="item-note">川遊び用</p>
                 </div>
                 <div class="item-wrapper">
                     <label><input type="checkbox"> ボードゲーム等</label>
