--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 
-    
 </head>
 <body>
     <header>
@@ -26,6 +25,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
             <li><a href="team.html">Team</a></li>
+            <li><a href="drink.html">Drink</a></li>
             <li class="dropdown">
                 <span class="dropdown-toggle">Schedule</span>
                 <ul class="dropdown-menu">
@@ -48,7 +48,7 @@
         <li>スケジュールに関して気になることがあれば<a href="home.html#organizer">幹事</a>まで！</li>
       </ul>
     </div>
-    <div class="last-updated">（最終更新 2025/07/24 12:04）</div>
+    <div class="last-updated">（最終更新 2025/07/22 14:40）</div>
 
     <div class="schedule-container">
         <div class="day-section">
