--- a/team.html
+++ b/team.html
@@ -25,6 +25,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
             <li><a href="team.html">Team</a></li>
+            <li><a href="drink.html">Drink</a></li>
             <li class="dropdown">
                 <span class="dropdown-toggle">Schedule</span>
                 <ul class="dropdown-menu">
@@ -46,7 +47,7 @@
         <li>スコアは随時更新予定です。</li>
       </ul>
     </div>
-    <div class="last-updated">（最終更新 2025/07/24 12:00）</div>
+    <div class="last-updated">（最終更新 2025/07/15 14:40）</div>
 
     <div class="team-container">
       <div class="team-card red-team">
