--- a/drink.html
+++ b/drink.html
@@ -41,7 +41,7 @@
     </nav>
     </header>
     <div class="notes-box">
-      <h4>飲み物・お菓子のお知らせ</h4>
+      <h4>飲み物・お菓子について</h4>
       <ul>
         <li>宴会やレク用にサークルで買った飲み物やお菓子は、近日こちらで公開予定です。</li>
         <li>「これも欲しい！」というものがあれば、自由に持ち込みOKです。</li>
