--- a/schedule.html
+++ b/schedule.html
@@ -168,6 +168,13 @@
                     </div>
                 </div>
                 <div class="timeline-item">
+                    <div class="timeline-time">17:00</div>
+                    <div class="timeline-content">
+                        <h3>入浴</h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
                     <div class="timeline-time">18:00</div>
                     <div class="timeline-content">
                         <h3>BBQ</h3>
@@ -221,6 +228,13 @@
                     <div class="timeline-content">
                         <h3>テニス / 川遊び</h3>
                         <p>どちらか好きなほうで</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-content">
+                        <h3>スイカ割り</h3>
+                        <p></p>
                     </div>
                 </div>
                 <div class="timeline-item">
